added flickr service

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://visitvaxjo.disqus.com/embed.js" type="text/javascript" async="true"></script>
 </body>
 </html>
